# ca

./: CMakeLists.txt  README.md  ca_types.cpp  ca_types.h  cell.cpp  cell.h  cellautom.cpp  cellautom.h  cellular_automata.cpp  fits.cpp  fits.h  gameoflife.cpp  gameoflife.h  plane.cpp  plane.h  rule.cpp  rule.h
old/: cellular_automata.prev.cpp  gifgd.c
